<resources>
    <string name="app_name">Password</string>
    <string name="action_search">搜索</string>
    <string name="action_settings">设置</string>
    <string name="prefs_title_normal">一般设置</string>
    <string name="prefs_key_normal">prefs_key_normal</string>
    <string name="prefs_key_checkbox">prefs_key_checkbox</string>
    <string name="prefs_title_security">安全</string>
    <string name="prefs_key_showpassword">show_password</string>
    <string name="prefs_key_lock">设置安全锁</string>
    <string name="title_settings">设置</string>
    <string name="title_view">查看</string>
    <string name="title_edit">编辑</string>

    <string name="label_account">账号</string>
    <string name="label_password">密码</string>
    <string name="label_remark">备注</string>
    <string name="action_color_selector">更改颜色</string>
    <string name="action_lock">锁定</string>
    <string name="action_delete">删除</string>
    <string name="label_secure_email">安全邮箱</string>
    <string name="label_secure_mobile">安全手机</string>
    <string name="action_done">保存</string>
    <string name="title_feedback">反馈</string>

    <string name="title_password_type">密码分类</string>
</resources>
