<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefs_title_normal">
        <EditTextPreference android:key="@string/prefs_key_normal"
            android:title="@string/prefs_key_normal"
            android:summary="@string/prefs_key_normal"/>
        <CheckBoxPreference android:key="@string/prefs_key_checkbox"
            android:title="@string/prefs_key_checkbox"
            android:summary="@string/prefs_key_checkbox"
            android:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_title_security">
        <CheckBoxPreference android:key="@string/prefs_key_showpassword"
            android:defaultValue="false"
            android:summary="@string/prefs_key_showpassword"/>
        <CheckBoxPreference android:key="@string/prefs_key_lock"
            android:defaultValue="false"
            android:summary="@string/prefs_key_lock" />
    </PreferenceCategory>
</PreferenceScreen>