<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar_actionbar_with_headerbar"/>
    <com.wkswind.password.custom.DrawShadowFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:shadowDrawable="@drawable/header_shadow">
        <android.support.v7.widget.LinearLayoutCompat
            android:paddingLeft="@dimen/keyline_1"
            android:paddingRight="@dimen/keyline_1"
            android:paddingEnd="@dimen/keyline_1"
            android:paddingTop="@dimen/keyline_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:showDividers="middle"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_account"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_password"
                    android:singleLine="true"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_remark"
                    android:minLines="3"/>
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.LinearLayoutCompat>
    </com.wkswind.password.custom.DrawShadowFrameLayout>
</LinearLayout>